# easy-dlm

./: .gitignore  LICENCE.txt  MAKEFILE  Makefile  README.md  pyproject.toml  requirements.txt
src/: test.py  upload.py
src/inference/: inference_config.yaml  sampling.py  test_inference.py
src/model/: model_config.py
src/train/: config.yaml  diffusion_trainer.py  train.py  training_config.yaml
src/utils/: __init__.py  collate.py
