[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Easy-DLM"
version = "1.0"
description = ""
authors = [{ name="Sinoué GAD" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "torch",
    "transformers",
    "peft",
    "git+https://github.com/GAD-cell/muon-clip.git@main",
    "hf_transfer",
    "huggingface_hub"
]

[tool.uv]
package = false